adding code from lecture

--- a/index.html
+++ b/index.html
@@ -10,7 +10,109 @@
 </head>
 
 <body>
-  <h1>Hello World</h1>
+  <header>
+    <img src="http://placekitten.com/300/300" alt="">
+    <h1>YOUR NAME HERE</h1>
+    <h5>SOME JOB TITLE</h5>
+  </header>
+  <main class="d-flex">
+    <aside>
+      <div id="info">
+        <h2>Info</h2>
+        <div>
+          <p><b>Address</b></p>
+          <p>123 Fake St, Fake City OR</p>
+        </div>
+        <div>
+          <p><b>Phone</b></p>
+          <a href="tel:1-208-700-0000">(208)-700-0000</a>
+        </div>
+        <div>
+          <p><b>Email</b></p>
+          <a href="mailto:Mark@boisecodeworks.com">Mark@BoiseCodeWorks.com</a>
+        </div>
+      </div>
+      <div id="skills">
+        <h2>Skills</h2>
+        <!-- NOTE Emmet Abrv "ul>li*8>p" -->
+        <ul>
+          <li>
+            <p>Some Skill 1</p>
+            <progress value="85" max="100"></progress>
+          </li>
+          <li>
+            <p>Some Skill 2</p>
+            <progress value="90" max="100"></progress>
+          </li>
+          <li>
+            <p>Some Skill</p>
+            <progress value="90" max="100"></progress>
+          </li>
+          <li>
+            <p>Some Skill</p>
+            <progress value="70" max="100"></progress>
+          </li>
+          <li>
+            <p>Some Skill</p>
+            <progress value="93" max="100"></progress>
+          </li>
+          <li>
+            <p>Some Skill</p>
+            <progress value="90" max="100"></progress>
+          </li>
+          <li>
+            <p>Some Skill</p>
+            <progress value="90" max="100"></progress>
+          </li>
+          <li>
+            <p>Some Skill</p>
+            <progress value="90" max="100"></progress>
+          </li>
+        </ul>
+      </div>
+    </aside>
+    <section>
+      <div id="profile">
+        <h2>Profile</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, soluta excepturi id repellat nostrum sint cum
+          tenetur laborum blanditiis dolor adipisci explicabo alias illo assumenda, rem aspernatur deserunt odit. Esse
+          vitae at possimus sequi quam?</p>
+      </div>
+      <hr class="blue">
+      <div id="job-history">
+        <h2>Employment History</h2>
+        <div class="job">
+          <!-- An element can have multiple classes (space seperated) -->
+          <div class="d-flex justify-content-between">
+            <h5>Job TITLE</h5>
+            <p>DATES</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aliquid, iure eos cumque officiis nisi quam
+            nostrum debitis voluptas? Quae minima nulla possimus voluptatem expedita consequuntur rerum assumenda?
+            Dignissimos, quibusdam?</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quisquam?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quisquam?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quisquam?</li>
+          </ul>
+        </div>
+        <div class="job">
+          <div class="d-flex justify-content-between">
+            <h5>Job TITLE</h5>
+            <p>DATES</p>
+          </div>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo aliquid, iure eos cumque officiis nisi quam
+            nostrum debitis voluptas? Quae minima nulla possimus voluptatem expedita consequuntur rerum assumenda?
+            Dignissimos, quibusdam?</p>
+          <ul>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quisquam?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quisquam?</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, quisquam?</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 
 </html>
